# torch2onnx2trt

./: .gitignore  README.md
torch_custom_op/: custom_op.py  export_custom_op.py
torch_custom_op/cpp/: customOp.cpp  setup.py
torch_custom_op/cuda/: CMakeLists.txt  customCudaOp.cpp  customCudaOpKernel.cu  customCudaOpKernelAccessor.cu  setup.py
trt_custom_op/PluginLinear/: LinearPlugin.cu  LinearPlugin.h  Makefile  Makefile.inc  bias.npy  model-onnx-Dim4.plan  modify_onnx.py  testLinearPlugin.py  testLinearPluginFromONNX.py  weight.npy
trt_custom_op/PluginLinear/debug/: transpMatrix  transposeMat  unitest.cu
